<resources>
    <string name="app_name">AMazeByCharlesHu</string>
    <string name="game_intro_text_1">ATTACK</string>
    <string name="game_intro_text_2">ON THE</string>
    <string name="game_intro_text_3">DEATH STAR</string>
    <string name="game_intro_image_text">Death Star over Endor</string>
    <string name="maze_gen_intro">Maze Generation:</string>
    <string name="maze_gen_complexity">Complexity:</string>
    <string name="maze_gen_rooms">Include Rooms:</string>
    <string name="maze_gen_rooms_select_yes">Yes</string>
    <string name="maze_gen_rooms_select_no">No</string>
    <string name="maze_gen_algorithm">Generation Algorithm:</string>
    <string-array name="maze_gen_algorithm_list">
        <item>DFS</item>
        <item>Prim</item>
        <item>Boruvka</item>
    </string-array>
    <string name="maze_gen_exec_explore">Explore</string>
    <string name="maze_gen_exec_revisit">Revisit</string>
    <string name="maze_gen_image_text">Hangar bay</string>
    <string name="robot_gen_title_text">Generating Maze…</string>
    <string name="robot_gen_progress_text">Progress</string>
    <string name="robot_gen_intro">Player Settings:</string>
    <string name="robot_gen_driver">Driver Type:</string>
    <string name="robot_gen_driver_select_manual">Manual</string>
    <string name="robot_gen_driver_select_wallfollower">Wallfollower</string>
    <string name="robot_gen_driver_select_wizard">Wizard</string>
    <string name="robot_gen_sensors">Robot Config:</string>
    <string name="robot_gen_sensors_select_premium">Premium</string>
    <string name="robot_gen_sensors_select_mediocre">Mediocre</string>
    <string name="robot_gen_sensors_select_soso">Soso</string>
    <string name="robot_gen_sensors_select_shaky">Shaky</string>
    <string name="robot_gen_progress_finish_text">Generation Complete</string>
    <string name="robot_gen_progress_incomplete_text">Generation Not Yet Complete</string>
    <string name="robot_gen_progress_finish_start">Game Starting…</string>
    <string name="robot_gen_progress_finish_warn">Select a Driver to Continue!</string>
    <string name="play_map_text">Map Settings</string>
    <string name="play_map_show">Show</string>
    <string name="play_map_solution">Solution</string>
    <string name="play_map_walls">Walls</string>
    <string name="play_map_size_text">Size:</string>
    <string name="play_plus_text">+</string>
    <string name="play_minus_text">-</string>
    <string name="play_manual_map_content_description_up">Arrow pointing up</string>
    <string name="play_manual_map_content_description_left">Arrow pointing left</string>
    <string name="play_manual_map_content_description_right">Arrow pointing right</string>
    <string name="play_manual_map_content_description_jump">Arrow jumping over point</string>
    <string name="manual_play_skip_win">ShortCut</string>
    <string name="play_skip_win">Go2Winning</string>
    <string name="play_skip_lose">Go2Losing</string>
    <string name="play_auto_energy_text">Energy:</string>
    <string name="play_auto_speed_text">Speed</string>
    <string name="play_auto_sensor_text">Sensor Status</string>
    <string name="play_auto_sensor_description_front">Light indicating front sensor status</string>
    <string name="play_auto_sensor_description_left">Light indicating left sensor status</string>
    <string name="play_auto_sensor_description_right">Light indicating right sensor status</string>
    <string name="play_auto_sensor_description_back">Light indicating back sensor status</string>
    <string name="play_auto_sensor_description_body">Arrow representing body of robot</string>
    <string name="play_auto_description_play_pause">Play/pause symbol to start/pause</string>
    <string name="play_auto_description_description_slow">Symbol to slow down animation</string>
    <string name="play_auto_description_description_fast">Symbol to speed up animation</string>
    <string name="player_win_title">You Win!</string>
    <string name="driver_win_title">Driver has Won!</string>
    <string name="driver_lose_title">Driver has Lost</string>
    <string name="player_win_text">you have escaped…</string>
    <string name="driver_win_text">driver has escaped…</string>
    <string name="play_win_image_text">Death Star Exploding</string>
    <string name="play_lose_image_text">Death Star surviving</string>
    <string name="driver_lose_text">Cause:</string>
    <string name="driver_lose_energy">No Energy</string>
    <string name="driver_lose_crash">Crashed</string>
    <string name="end_return_text">press back to return to title screen</string>
    <string name="end_stats_text">Stats:</string>
    <string name="end_stats_travelled_text">Distance travelled:</string>
    <string name="end_stats_shortest_text">Shortest possible distance:</string>
    <string name="end_stats_energy_text">Energy consumed:</string>
    <string name="preference_file_key">edu.wm.cs.cs301.amazebycharleshu.FILE_PREFERENCE_KEY</string>
    <string name="play_background_image_text">X-Wing cockpit</string>
</resources>